@@ -400,32 +400,35 @@ static const char *help_accrint = {
 	   "frequency[,basis])\n"
 	   "@DESCRIPTION="
 	   "ACCRINT calculates the accrued interest for a security that "
-	   "pays periodic interest.  "
+	   "pays periodic interest.\n\n"
 	   "@issue is the issue date of the security.  @first_interest is "
 	   "the first interest date of the security.  @settlement is the "
 	   "settlement date of the sequrity.  The settlement date is always "
 	   "after the issue date (the date when the security is bought). "
 	   "@rate is the annual rate of the security and @par is the par "
-	   "value of the security. "
-	   "@frequency is the number of coupon payments per year. "
-	   "Allowed frequencies are: 1 = annual, 2 = semi, 4 = quarterly. "
+	   "value of the security. @frequency is the number of coupon "
+	   "payments per year.\n\n"
+	   "Allowed frequencies are:\n"
+	   "  1 = annual,\n"
+	   "  2 = semi,\n"
+	   "  4 = quarterly.\n\n"
 	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
-	   "0  US 30/360\n"
-	   "1  actual days/actual days\n"
-	   "2  actual days/360\n"
-	   "3  actual days/365\n"
-	   "4  European 30/360\n"
+	   "  0  US 30/360\n"
+	   "  1  actual days/actual days\n"
+	   "  2  actual days/360\n"
+	   "  3  actual days/365\n"
+	   "  4  European 30/360\n"
 	   "\n"
-	   "If @issue date, @first_interest date, or @settlement date is not "
-	   "valid, ACCRINT returns #NUM! error. "
-	   "The dates must be @issue < @first_interest < @settlement, or "
-	   "ACCRINT returns #NUM! error. "
-	   "If @rate <= 0 or @par <= 0 , ACCRINT returns #NUM! error. "
-	   "If @basis is omitted, US 30/360 is applied. "
-	   "If @basis < 0 or @basis > 4, ACCRINT returns #NUM! error. "
-	   "If @issue date is after @settlement date or they are the same, "
-	   "ACCRINT returns #NUM! error. "
+	   "* If @issue date, @first_interest date, or @settlement date is not "
+	   "valid, ACCRINT returns #NUM! error.\n"
+	   "* The dates must be @issue < @first_interest < @settlement, or "
+	   "ACCRINT returns #NUM! error.\n"
+	   "* If @rate <= 0 or @par <= 0 , ACCRINT returns #NUM! error.\n"
+	   "* If @basis is omitted, US 30/360 is applied.\n"
+	   "* If @basis < 0 or @basis > 4, ACCRINT returns #NUM! error.\n"
+	   "* If @issue date is after @settlement date or they are the same, "
+	   "ACCRINT returns #NUM! error.\n"
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -491,26 +494,26 @@ static const char *help_accrintm = {
 	   "@SYNTAX=ACCRINTM(issue,maturity,rate[,par,basis])\n"
 	   "@DESCRIPTION="
 	   "ACCRINTM calculates and returns the accrued interest for a "
-	   "security from @issue to @maturity date.  "
+	   "security from @issue to @maturity date.\n\n"
 	   "@issue is the issue date of the security.  @maturity is "
 	   "the maturity date of the security.  @rate is the annual "
 	   "rate of the security and @par is the par value of the security. "
 	   "If you omit @par, ACCRINTM applies $1,000 instead.  "
 	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
-	   "0  US 30/360\n"
-	   "1  actual days/actual days\n"
-	   "2  actual days/360\n"
-	   "3  actual days/365\n"
-	   "4  European 30/360\n"
+	   "  0  US 30/360\n"
+	   "  1  actual days/actual days\n"
+	   "  2  actual days/360\n"
+	   "  3  actual days/365\n"
+	   "  4  European 30/360\n"
 	   "\n"
-	   "If @issue date or @maturity date is not valid, ACCRINTM returns "
-	   "#NUM! error. "
-	   "If @rate <= 0 or @par <= 0, ACCRINTM returns #NUM! error. "
-	   "If @basis is omitted, US 30/360 is applied. "
-	   "If @basis < 0 or @basis > 4, ACCRINTM returns #NUM! error. "
-	   "If @issue date is after @maturity date or they are the same, "
-	   "ACCRINTM returns #NUM! error. "
+	   "* If @issue date or @maturity date is not valid, ACCRINTM returns "
+	   "#NUM! error.\n"
+	   "* If @rate <= 0 or @par <= 0, ACCRINTM returns #NUM! error.\n"
+	   "* If @basis is omitted, US 30/360 is applied.\n"
+	   "* If @basis < 0 or @basis > 4, ACCRINTM returns #NUM! error.\n"
+	   "* If @issue date is after @maturity date or they are the same, "
+	   "ACCRINTM returns #NUM! error.\n"
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -545,25 +548,25 @@ static const char *help_intrate = {
 	   "[,basis])\n"
 	   "@DESCRIPTION="
 	   "INTRATE calculates and returns the interest rate of a fully "
-	   "vested security.  @settlement is the settlement date of the "
-	   "security.  @maturity is the maturity date of the security. "
-	   "@investment is the prize of the security paid at @settlement "
-	   "date and @redemption is the amount to be received at @maturity "
-	   "date.  "
+	   "vested security.\n\n"
+	   "@settlement is the settlement date of the security.  @maturity "
+	   "is the maturity date of the security. @investment is the prize "
+	   "of the security paid at @settlement date and @redemption is "
+	   "the amount to be received at @maturity date.\n\n"
 	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
-	   "0  US 30/360\n"
-	   "1  actual days/actual days\n"
-	   "2  actual days/360\n"
-	   "3  actual days/365\n"
-	   "4  European 30/360\n"
+	   "  0  US 30/360\n"
+	   "  1  actual days/actual days\n"
+	   "  2  actual days/360\n"
+	   "  3  actual days/365\n"
+	   "  4  European 30/360\n"
 	   "\n"
-	   "If @settlement date or @maturity date is not valid, INTRATE "
-	   "returns #NUM! error. "
-	   "If @basis is omitted, US 30/360 is applied. "
-	   "If @basis < 0 or @basis > 4, INTRATE returns #NUM! error. "
-	   "If @settlement date is after @maturity date or they are the same, "
-	   "INTRATE returns #NUM! error. "
+	   "* If @settlement date or @maturity date is not valid, INTRATE "
+	   "returns #NUM! error.\n"
+	   "* If @basis is omitted, US 30/360 is applied.\n"
+	   "* If @basis < 0 or @basis > 4, INTRATE returns #NUM! error.\n"
+	   "* If @settlement date is after @maturity date or they are the "
+	   "same, INTRATE returns #NUM! error.\n"
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -605,25 +608,26 @@ static const char *help_received = {
 	   "@SYNTAX=RECEIVED(settlement,maturity,investment,rate[,basis])\n"
 	   "@DESCRIPTION="
 	   "RECEIVED calculates and returns the amount to be received at "
-	   "@maturity date for a security bond.  @settlement is the "
-	   "settlement date of the security.  @maturity is the maturity date "
-	   "of the security.  The amount of investement is specified in "
-	   "@investment.  @rate is the security's discount rate. "
+	   "@maturity date for a security bond.  "
+	   "@settlement is the settlement date of the security.  "
+	   "@maturity is the maturity date of the security.  The amount "
+	   "of investement is specified in @investment.  @rate is the "
+	   "security's discount rate.\n\n"
 	   "@basis is the type of day counting system you want to "
 	   "use:\n"
 	   "\n"
-	   "0  US 30/360\n"
-	   "1  actual days/actual days\n"
-	   "2  actual days/360\n"
-	   "3  actual days/365\n"
-	   "4  European 30/360\n"
+	   "  0  US 30/360\n"
+	   "  1  actual days/actual days\n"
+	   "  2  actual days/360\n"
+	   "  3  actual days/365\n"
+	   "  4  European 30/360\n"
 	   "\n"
-	   "If @settlement date or @maturity date is not valid, RECEIVED "
-	   "returns #NUM! error. "
-	   "If @basis is omitted, US 30/360 is applied. "
-	   "If @basis < 0 or @basis > 4, RECEIVED returns #NUM! error. "
-	   "If @settlement date is after @maturity date or they are the same, "
-	   "RECEIVED returns #NUM! error. "
+	   "* If @settlement date or @maturity date is not valid, RECEIVED "
+	   "returns #NUM! error.\n"
+	   "* If @basis is omitted, US 30/360 is applied.\n"
+	   "* If @basis < 0 or @basis > 4, RECEIVED returns #NUM! error.\n"
+	   "* If @settlement date is after @maturity date or they are the "
+	   "same, RECEIVED returns #NUM! error.\n"
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -662,24 +666,25 @@ static const char *help_pricedisc = {
 	   "@DESCRIPTION="
 	   "PRICEDISC calculates and returns the price per $100 face value "
 	   "of a security bond.  The security does not pay interest at "
-	   "maturity.  @settlement is the settlement date of the security. "
+	   "maturity.\n\n"
+	   "@settlement is the settlement date of the security. "
 	   "@maturity is the maturity date of the security.  @discount is "
 	   "the rate for which the security is discounted.  @redemption is "
-	   "the amount to be received on @maturity date.  "
+	   "the amount to be received on @maturity date.\n\n"
 	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
-	   "0  US 30/360\n"
-	   "1  actual days/actual days\n"
-	   "2  actual days/360\n"
-	   "3  actual days/365\n"
-	   "4  European 30/360\n"
+	   "  0  US 30/360\n"
+	   "  1  actual days/actual days\n"
+	   "  2  actual days/360\n"
+	   "  3  actual days/365\n"
+	   "  4  European 30/360\n"
 	   "\n"
-	   "If @settlement date or @maturity date is not valid, PRICEDISC "
-	   "returns #NUM! error. "
-	   "If @basis is omitted, US 30/360 is applied. "
-	   "If @basis < 0 or @basis > 4, PRICEDISC returns #NUM! error. "
-	   "If @settlement date is after @maturity date or they are the same, "
-	   "PRICEDISC returns #NUM! error. "
+	   "* If @settlement date or @maturity date is not valid, PRICEDISC "
+	   "returns #NUM! error.\n"
+	   "* If @basis is omitted, US 30/360 is applied.\n"
+	   "* If @basis < 0 or @basis > 4, PRICEDISC returns #NUM! error.\n"
+	   "* If @settlement date is after @maturity date or they are the "
+	   "same, PRICEDISC returns #NUM! error.\n"
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
@@ -712,25 +717,25 @@ static const char *help_pricemat = {
 	   "@SYNTAX=PRICEMAT(settlement,maturity,issue,rate,yield[,basis])\n"
 	   "@DESCRIPTION="
 	   "PRICEMAT calculates and returns the price per $100 face value "
-	   "of a security.  The security pays interest at maturity. "
+	   "of a security.  The security pays interest at maturity.\n\n"
 	   "@settlement is the settlement date of the security.  @maturity is "
 	   "the maturity date of the security.  @issue is the issue date of "
 	   "the security.  @rate is the discount rate of the security. "
 	   "@yield is the annual yield of the security. "
 	   "@basis is the type of day counting system you want to use:\n"
 	   "\n"
-	   "0  US 30/360\n"
-	   "1  actual days/actual days\n"
-	   "2  actual days/360\n"
-	   "3  actual days/365\n"
-	   "4  European 30/360\n"
+	   "  0  US 30/360\n"
+	   "  1  actual days/actual days\n"
+	   "  2  actual days/360\n"
+	   "  3  actual days/365\n"
+	   "  4  European 30/360\n"
 	   "\n"
-	   "If @settlement date or @maturity date is not valid, PRICEMAT "
-	   "returns #NUM! error. "
-	   "If @basis is omitted, US 30/360 is applied. "
-	   "If @basis < 0 or @basis > 4, PRICEMAT returns #NUM! error. "
-	   "If @settlement date is after @maturity date or they are the same, "
-	   "PRICEMAT returns #NUM! error. "
+	   "* If @settlement date or @maturity date is not valid, PRICEMAT "
+	   "returns #NUM! error.\n"
+	   "* If @basis is omitted, US 30/360 is applied.\n"
+	   "* If @basis < 0 or @basis > 4, PRICEMAT returns #NUM! error.\n"
+	   "* If @settlement date is after @maturity date or they are the "
+	   "same, PRICEMAT returns #NUM! error.\n"
 	   "\n"
 	   "@EXAMPLES=\n"
 	   "\n"
