@@ -1,3 +1,7 @@
+2002-07-26  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* functions.c: Some function description clean up.
+
 2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* sc-fin.c (ScGetGDA, ScInterVDB, get_vdb): Imported from the OO
